# hyphen

./: .gitignore  .travis.yml  BUILDING.md  Install_Hyphen_Deb.bash  Install_Hyphen_OSX.bat  LOWLEVEL.md  README.md  Test.hs  appveyor.yml  hyphen-dummy.cabal  hyphen_examples.py  hyphen_examples_full.py  stack.yaml
.github/workflows/: ci.yml
hyphen/: BUILDING.md  __init__.py  build-extn.py  build-extn.sh  caches.py  hslowlevel.version  hsobj.py  importing.py  marshall_ctor.py  marshall_obj_to_hs.py  marshall_obj_to_py.py  source_loading.py  utils.py  wrapping_pyfns.py
hyphen/lowlevel_src/: HsObjRaw.hs  HsType.hs  Hyphen.hs  HyphenBase.hs  HyphenExceptions.hs  HyphenGHC.hs  HyphenKinds.hs  HyphenTyCon.hs  HyphenUnify.hs  HyphenWrapping.hs  Hyphen_stub.h  PythonBase.hs  Pythonate.hs  Test.hs  hyphen_c.c
test_tools/: interrupting_after.py  test_GIL_release.py  test_ei_with_nuisance_threads.py  test_expecting_interruption.py
travis/: travis_before_install.sh  travis_install.sh
